prevent horizontal scrolling

--- a/beacon-hill-theme.css
+++ b/beacon-hill-theme.css
@@ -22,18 +22,19 @@ html {
 
 /* line 9, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 html, body {
+  overflow-x: hidden;
   background: #fff;
   color: #555;
   margin: 0;
 }
 
-/* line 14, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 15, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 body {
   font-family: 'Futura', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   letter-spacing: 0.2px;
 }
 
-/* line 19, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 20, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 h1 {
   font-family: 'Bosox Full';
   font-size: 6rem;
@@ -42,7 +43,7 @@ h1 {
   margin: 0;
 }
 
-/* line 26, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 27, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .overline, .underline {
   color: #ccc;
   font-size: 1.1rem;
@@ -50,17 +51,17 @@ h1 {
   margin-left: 25px;
 }
 
-/* line 33, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 34, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .overline {
   margin-bottom: -3px;
 }
 
-/* line 37, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 38, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .underline {
   margin-top: -22px;
 }
 
-/* line 41, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 42, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 h2 {
   background: #fff;
   margin-left: -30px;
@@ -72,18 +73,18 @@ h2 {
 }
 
 @media screen and (max-width: 739px) {
-  /* line 51, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+  /* line 52, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
   h2 {
     font-size: 1rem;
   }
 }
 
-/* line 54, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 55, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 .title {
   padding: 25px 0 50px;
 }
 
-/* line 57, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
+/* line 58, /Users/mwilson/projects/beacon-hill-archive/styles/_base.sass */
 section p {
   max-width: 740px;
   font-family: 'Vollkorn', serif;
