--- a/styles/_base.sass
+++ b/styles/_base.sass
@@ -7,6 +7,7 @@ html
 	-webkit-text-size-adjust: 100% /* Prevent font scaling in landscape while allowing user zoom */
 
 html, body 
+	overflow-x: hidden
 	background: #fff
 	color: #555
 	margin: 0
